# clock_embedded

./: CMakeLists.txt  resources.qrc  run_clock.sh
header/: ClockWidget.h
img_src/: img_src.jpeg:Zone.Identifier
src/: ClockMain.cpp  ClockWidget.cpp
